chore: fix minor anomalies